static/css/style.css
/*-- base content --*/

html {
    scroll-behavior: smooth;
}

body {
    background-color: #fafafa;
    font-family: 'Commissioner', sans-serif;
}

a {
    color: inherit;
}

main {
    padding-bottom: 2.5rem;
}

/* .preloader-wrapper {
    position: absolute;
    top: 50%;
    left: 50%;
    width: 200px;
    height: 200px;
    z-index: 9999;
    background-color: white;
} */

#returnToTop {
    display: none;
    position: fixed;
    bottom: 5rem;
    right: 1.2rem;
    font-size: 3rem;
    text-align: center;
    color: rgba(175, 125, 0, 0.8);
    cursor: pointer;
    background: no-repeat;
    z-index: 99;
    padding-bottom: 20px;
}

#returnToTop:hover {
    opacity: 1;
}

/*-- navbar --*/

nav .brand-logo {
    font-size: 1.1rem;
}

.brand-logo {
    font-family: 'Bodoni Moda', serif;
    text-transform: uppercase;
    margin-left: 1rem;
    text-shadow: 2px 2px #b8860b;
}

.nav-link {
    font-size: 1.3rem;
}

.sidenav {
    background-color: #37474f;
    margin-top: 50px;
    margin-left: 2px;
    height: 50%;
}

.sidenav li a {
    color: #ffffff;
}

/*-- flashed messages --*/

#flashed_messages {
    position: fixed;
    top: 20%;
    background-color: rgba(255, 0, 0, 0.7);
    margin: 0 25vw;
    width: 50%;
}

.flash-message {
    color: white;
    padding: 5px 20px;
}

/*-- homepage --*/

.jumbotron {
    background: url(/static/images/jumbotron_image.png) no-repeat center center fixed;
    background-size: cover;
    min-height: 480px;
}

.overlay {
    position: absolute;
    /* top: 0; */
    /* left: 0; */
    height: 100%;
    width: 100%;
}

.callout {
    padding-top: 100px;
}

.jumbotron-header {
    padding: 5px;
    font-size: 2rem;
    color: #fafafa;
    text-shadow: 3px 3px #212121;
    margin-top: 30px;
    font-family: 'Big Shoulders Inline Text', cursive;
}

.signup {
    font-family: 'Commissioner', sans-serif;
    font-size: 1.2rem;
    text-transform: capitalize;
    background-color: #3da040;
    border-radius: 10px;
    height: 40px;
    line-height: 40px;
}

.signup:hover {
    background-color: rgb(40, 135, 40);
}

.search-btn {
    background-color: #977318;
    font-family: 'Commissioner', sans-serif;
    text-transform: capitalize;
    height: 35px;
    line-height: 35px;
    padding: 0 15px;
    border-radius: 10px;
}

.search-btn:hover {
    background-color: #83610d;
}

.login-notice {
    background-color: rgba(255, 255, 255, 0.8);
    padding: 2px 15px;
    border-radius: 10px;
}

.login-notice a,
.login-notice a:hover {
    color: #000000;
}

.maps-header {
    font-size: 2rem;
}

.maps-para {
    font-family: 'Source Sans Pro', sans-serif;
    font-size: 0.8rem;
    color: #121212;
    margin: 15px 10px;
}

.body-address a {
    color: #121212;
}

.body-address a:hover {
    text-decoration: underline;
}

#map {
    min-height: 360px;
    margin-top: 40px;
}

.welcome-heading {
    font-size: 2.9rem;
}

.contributions-heading {
    font-size: 2.7rem;
    text-transform: capitalize;
}

.term-name {
    font-weight: 800;
}


/*-- login and registration pages --*/

.login-heading,
.registration-heading {
    font-size: 2rem;
}

.sign-in,
.registration,
.add-definition
.edit-data {
    margin: 30px 5px;
}

.input-field label {
    color: #333222;
}

.sign-in .input-field .prefix,
.registration .input-field .prefix {
    font-size: 1.4rem;
    top: 0.8rem;
}

.register,
.login {
    border-radius: 10px;
}

.register {
    height: 48px;
    line-height: 48px;
    font-size: 12px;
    padding: 0 15px;
}

.register-link,
.login-link {
    color: #121212;
    text-decoration: underline;
}

/*-- dictionary page --*/

.dictionary-heading {
    font-size: 3rem;
}

.introductory-para {
    font-size: 1.1rem;
}

.key-terms {
    font-size: 2.6rem;
}

.terms-wrapper {
    border: 1px solid #000000;
}

.entry-block {
    padding: 10px 0;
    border-bottom: 1px solid #000000;
    margin-bottom: 5px;
}

.dictionary-field {
    border-bottom: 1px dotted #212121;
    margin-bottom: 5px;
}

.term-name {
    font-family: 'Roboto', sans-serif;
    font-weight: 600;
    letter-spacing: 0.05rem;
}

.delete,
.edit,
.add {
    border-radius: 10px;
}

.delete span,
.edit span {
    display: none;
}

.upvote-container {
    position: fixed;
    bottom: 50%;
    left: 25%;
    width: 50%;
    font-size: 1.2rem;
    color: #fafafa;
    opacity: .7;
    padding: 10px 20px;
    z-index: 99;
}

.upvote-alert {
    background-color: #3da040;
    padding: 10px 20px;
    letter-spacing: 0.05rem;
}

.upvote,
.downvote {
    border-radius: 10px;
}

.downvote-container {
    position: fixed;
    bottom: 50%;
    left: 25%;
    width: 50%;
    font-size: 1.2rem;
    color: #fafafa;
    opacity: .7;
    padding: 10px 20px;
    z-index: 99;
}

.downvote-alert {
    background-color: #df2626;
    padding: 10px 20px;
    letter-spacing: 0.05rem;
}

.add-entry {
    margin-top: 30px;
}

/*-- profile page --*/

.contributions-container {
    padding-bottom: 35px;
}

.warning {
    font-size: 1.6rem;
    text-transform: uppercase;
}

.warning i {
    color: #ffc400;
    font-size: 2rem;
}

/*-- manage users --*/

.user-info-container {
    margin: 0 auto;
    width: 90%;
}

.user-field {
    white-space: nowrap;
    overflow: hidden;
}

.admin-notice-container {
    padding-top: 35px;
}

/*-- user info container --*/

.user-info-heading,
.term-info-heading {
    font-size: 3rem;
}

.edit-data button {
    font-size: 11px;
}

/*-- footer --*/

.page-footer {
    /* height: 10.3rem; */
    /* position: absolute;  */
    text-align: center;
    bottom: 0;
    left: 0;
    background: url(/static/images/footer_bg.png);
    color: #ffffff;
    width: 100%;
    padding-top: 10px;
}

.info-container {
    margin-left: 20px;
    margin-right: 20px;
}

.info-container h6 {
    font-size: 1rem;
}

.info-container address {
    font-size: 0.8rem;
}

.page-footer a {
    color: #ffffff;
    height: 35px;
    line-height: 35px;
    margin-left: 0;
}

.page-footer a:hover {
    text-decoration: underline;
}

.brand-logo img {
    width: 100%;
}

.social-media-header {
    text-align: center;
}

.social-media-links {
    font-size: 1.4rem;
    text-align: center;
    margin-top: 0;
    margin-bottom: auto;
}

.social-media-links li {
    padding-right: 10px;
}

.footer-list-item {
    display: inline-block;
}

.copyright-info {
    padding-bottom: 10px;
    margin-top: -10px;
}

.copyright {
    font-size: 0.8rem;
}

/*-- media queries --*/

@media screen and (min-width: 320px) {
    nav .brand-logo {
        font-size: 1.2rem;
    }

    /* .callout {
        padding: 0;
    } */

    .jumbotron-header {
        font-size: 2.2rem;
        padding: 5px;
    }

    .signup {
        font-size: 1.4rem;
        height: 45px;
        line-height: 45px;
    }

    .search-btn {
        height: 40px;
        line-height: 40px;
    }

    .edit-data button {
        font-size: 14px;
    }
}

@media screen and (min-width: 360px) {
    nav .brand-logo {
        font-size: 1.6rem;
    }

    main {
        padding-bottom: 4rem;
    }

    /* .callout {
        padding: 0;
    } */

    .jumbotron-header {
        font-size: 2.4rem;
        padding: 10px;
    }

    .maps-para {
        font-size: 1rem;
    }

    .register {
        height: 54px;
        line-height: 54px;
        font-size: 15px;
        padding: 0 28px;
    }
    
   .delete span,
   .edit span {
        display: inline;
    }

    .delete i,
    .edit i {
        display: none;
    }

    .edit-data button {
        font-size: 15px;
    }

    .info-container h6 {
        font-size: 1.1rem;
    }

    .info-container address {
        font-size: 0.9rem;
    }

    .social-media-links {
        margin-top: 0;
        font-size: 1.5rem;
    }
}

@media screen and (min-width: 411px) {
    nav .brand-logo {
        font-size: 1.8rem;
    }

    .maps-header,
    .login-heading,
    .registration-heading {
        font-size: 2.4rem;
    }

    .brand-logo img {
        width: 80%;
    }
}

@media screen and (min-width: 540px) {
    nav .brand-logo {
        font-size: 2.6rem;
    }

    main {
        padding-bottom: 5rem;
    }
/* 
    .callout {
        padding: 5px 5px 0;
    } */

    .jumbotron-header {
        font-size: 3.6rem;
        padding: 15px;
    }

    .signup {
        font-size: 1.8rem;
        height: 55px;
        line-height: 55px;
    }

    .search-btn {
        height: 48px;
        line-height: 48px;
        padding: 0 30px;
    }

    .login-notice-wrapper {
        padding-bottom: 30px;
    }

    .maps-header,
    .login-heading,
    .registration-heading {
        font-size: 2.5rem;
    }

    .maps-para {
        font-size: 1.1rem;
    }

    .dictionary-heading {
        font-size: 4rem;
    }

    .key-terms {
        font-size: 3rem;
    }

    .info-container h6 {
        font-size: 1.15rem;
    }

    .brand-logo img {
        width: 65%;
    }
}

@media screen and (min-width: 601px) {
    .search-buttons {
        margin-top: 1.2rem;
    }

    .contributions-heading {
        font-size: 2.9rem;
    }

    .sign-in {
        margin: 30px;
    }

    .dictionary-field {
        border-right: 1px solid #000000;
        border-bottom: none;
        margin-bottom: none;
    }

    .welcome-heading,
    .user-info-heading,
    .term-info-heading {
        font-size: 3.6rem;
    }
    
    .brand-logo img {
        width: 90%;
        padding-top: 2.6rem;
    }
}

@media screen and (min-width: 768px) {
    main {
        padding-bottom: 7.5rem;
    }
    
    .callout-container {
        padding: 30px 15px 60px;
    }

    /* .callout {
        padding: 30px 10px 0;
    } */

    .jumbotron-header {
        font-size: 5rem;
        padding: 20px;
    }

    .signup {
        font-size: 2rem;
        height: 65px;
        line-height: 65px;
    }

    .search-btn {
        font-size: 1.3rem;
        height: 54px;
        line-height: 54px;
        padding: 0 28px;
    }

    .search-buttons button {
        margin: 0 10px;
    }

    .contributions-heading {
        font-size: 3.2rem;
    }

    .dictionary-heading {
        font-size: 4.5rem;
    }

    .welcome-heading,
    .user-info-heading,
    .term-info-heading {
        font-size: 4.2rem;
    }

    .info-container h6 {
        padding-top: 0.7rem;
    }

    .info-container address {
        font-size: 1rem;
    }

    .social-media-links {
        margin-top: 0;
        font-size: 1.6rem;
    }

    .login-heading,
    .registration-heading {
        font-size: 3.2rem;
    }
    
    .sign-in,
    .registration,
    .add-definition,
    .edit-data {
        margin: 30px 40px;
    }

    .sign-in .input-field .prefix,
    .registration .input-field .prefix {
        font-size: 2rem;
        top: 0.5rem;
    }

    .brand-logo img {
        width: 100%;
    }
}

@media screen and (min-width: 992px) {
    .body-address {
        margin-top: 100px;
    }
    
    .maps-para {
        margin: 15px 20px 15px 0px;
    }

    .contributions-heading {
        font-size: 3.5rem;
    }

    .contributions-container i {
        font-size: 0.9rem;
    }

    .sign-in,
    .registration,
    .add-definition,
    .edit-data {
        margin: 30px 100px;
    }

    .page-footer {
        text-align: left;
    }
}

@media screen and (min-width: 1066px) {
    .contributions-container i {
        font-size: 1.2rem;
    }
}

